IMCMS-371 - Image crop and size: - Fixed cropping logic on restore origin image.

--- a/src/main/webapp/css/image_editor/imcms-editable-img.css
+++ b/src/main/webapp/css/image_editor/imcms-editable-img.css
@@ -41,7 +41,6 @@
 }
 
 .imcms-preview-img-container {
-    overflow: hidden;
     position: absolute;
     z-index: 10003;
 }
